--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   socket_io_client: ^0.9.11
   provider: ^4.3.2+2
+  pie_chart: ^4.0.1
 
 dev_dependencies:
   flutter_test:
